--- a/DesafioNetflix/Views/Home/Index.cshtml
+++ b/DesafioNetflix/Views/Home/Index.cshtml
@@ -2,7 +2,167 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <img src="https://logospng.org/download/netflix/logo-netflix-1536.png">
+    <section>
+        <h2>Gêneros na plataforma</h2>
+        <button type="submit">Listar gêneros</button>
+    </section>
+
+    <section>
+        <h2>Busca de filmes/séries</h2>
+        <form>
+            <input type="text" placeholder="Insira título ou gênero">
+            <button type="submit">Buscar</button>
+        </form>
+        <br />
+        <h3>Resultado da busca</h3>
+        <table>
+            <thead>
+                <tr>
+                    <th scope="col">Título</th>
+                    <th scope="col">Nota</th>
+                    <th scope="col">Data de lançamento</th>
+                    <th scope="col">Tempo de duração</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Título 1</td>
+                    <td>4/5</td>
+                    <td>20/08/2018</td>
+                    <td>02:35</td>
+                </tr>
+                <tr>
+                    <td>Título 2</td>
+                    <td>3/5</td>
+                    <td>04/06/2002</td>
+                    <td>01:56</td>
+                </tr>
+                <tr>
+                    <td>...</td>
+                </tr>
+                <tr>
+                    <td>Título 10</td>
+                    <td>1/5</td>
+                    <td>01/01/2001</td>
+                    <td>01:11</td>
+                </tr>
+
+            </tbody>
+        </table>
+        <a role="button">Anterior</a>
+        <a role="button">Próxima</a>
+    </section>
 </div>
+
+<style>
+    /* Variáveis */
+    :root {
+        --white: #FFFFFF;
+        --dark-grey: #292929;
+        --dark-red: #b12025;
+        --light-red: #e61e25;
+    }
+
+    /* Reset CSS */
+    *,
+    *:after,
+    *:before {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        text-decoration: none;
+    }
+
+    body {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 100%;
+        list-style-type: none;
+        background-color: #1a1a1a;
+        color: var(--white);
+        margin: 2rem 0;
+    }
+
+    section {
+        background-color: var(--dark-grey);
+        padding: 1rem;
+        margin-top: 1rem;
+        border-radius: 15px;
+        box-shadow: rgba(0, 0, 0, 0.5) 0 2px 6px;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        color: var(--light-red);
+        font-weight: 500;
+        margin: 0.25rem 0;
+    }
+
+    .container {
+        max-width: 80%;
+        width: 100%;
+        padding-right: 15px;
+        padding-left: 15px;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    input {
+        padding: 0.5rem;
+        border-radius: 0.5rem;
+        border: none;
+        min-width: 300px
+    }
+
+    button,
+    a[role="button"] {
+        padding: 0.5rem 1rem;
+        border-radius: 0.5rem;
+        border: none;
+        background-color: var(--dark-red);
+        color: var(--white);
+        font-weight: bold;
+        cursor: pointer;
+    }
+
+    a[role="button"] {
+        display: inline-block;
+        margin: 0.2rem
+    }
+
+        button:hover,
+        a[role="button"]:hover {
+            background-color: var(--light-red);
+        }
+
+    table {
+        width: 100%;
+        margin: 1rem 0;
+    }
+
+    td,
+    th {
+        padding: 0.5rem 2rem;
+        text-align: left;
+    }
+
+    tbody tr:hover {
+        background-color: #FFFFFF20
+    }
+
+    ul {
+        padding-left: 2rem;
+    }
+
+    img {
+        aspect-ratio: 1;
+        max-width: 200px;
+        display: block;
+        margin: 0 auto;
+    }
+</style>
